<resources>
    <string name="app_name">User Login</string>
    <string name="new_user_register_here">New User? <u>Register here</u></string>
    <string name="forgot_password">Forgot Password? <u>Reset here</u></string>
    <string name="user_login_page">User Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_registration_page">User Registration Page</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="bold_name"><b>Name</b></string>
    <string name="bold_email"><b>Email</b></string>
    <string name="bold_contactNo"><b>Contact</b></string>
    <string name="contact_number">Contact Number</string>
    <string name="already_registered_login_here">Already registered? <u>Login here</u></string>
</resources>