<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/gradient_background">


    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/baloo_bhaina"
        android:text="@string/user_registration_page"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        android:background="@drawable/custom_border"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/accountContactNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        android:background="@drawable/custom_border"
        android:drawableStart="@drawable/ic_baseline_phone_iphone"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountContactNo"
        android:background="@drawable/custom_border"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:background="@drawable/custom_border"
        android:drawableStart="@drawable/ic_baseline_fingerprint"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:background="@drawable/button_background"
        android:fontFamily="@font/baloo_bhaina"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"/>


    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_registered_login_here"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/yellow"
        tools:targetApi="lollipop"/>


</androidx.constraintlayout.widget.ConstraintLayout>